@@ -1,5 +1,10 @@
 #!/bin/sh
 
+<<<<<<< HEAD
+=======
+export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m" 
+
+>>>>>>> development
 ################################################################
 #                                                              #
 #  WARNING: Do not modify or save this file under Windows.     #
@@ -18,6 +23,7 @@ echo "*     *****         of the MOGLiCC workspace                *****"
 echo "*     *****                                                 *****"
 echo "*     ***********************************************************"
 echo "*     ***********************************************************"
+<<<<<<< HEAD
 
 
 sh step1ExecUnitTestsAndBuildModules.sh
@@ -29,6 +35,49 @@ echo "*"
 
 
 sh step2BuildApplicationModule.sh
+=======
+echo "*"
+echo "*"
+
+echo "Press [Enter] to continue..."
+read enter
+
+
+echo "*     ***********************************************************"
+echo "*     ***********************************************************"
+echo "*     *                                                         *"
+echo "*     *                  ATTENTION:                             *"
+echo "*     *                                                         *"
+echo "*     * Make sure that the maven settings are valid defined in  *"
+echo "*     * application/src/main/resources/build.properties         *"
+echo "*     *                                                         *"
+echo "*     * If not, some tests in this step and the following steps *"
+echo "*     * will fail!                                              *"
+echo "*     *                                                         *"
+echo "*     ***********************************************************"
+echo "*     ***********************************************************"
+echo "*"
+echo "*"
+
+echo "Press [Enter] to continue..."
+read enter
+
+
+echo "*      Starting step 1 (mvn clean install -Dtest=BuildTestExecutor): building and unit-testing the sources of the 'MOGLiReleaseBuilder' for the automated release process"
+echo "*      Please wait until step 1 is finished successfully!"
+echo "*"
+sh step1TestReleaseBuilderSources.sh
+
+echo "*"
+echo "*"
+echo "*"
+echo "*"
+
+echo "*     Starting step 2 (mvn clean install on module 'parent'): building and unit-testing the sources of product"
+echo "*     Please wait until step 2 is finished successfully!"
+echo "*"
+sh step2ExecUnitTestsAndBuildModules.sh
+>>>>>>> development
 
 echo "*"
 echo "*"
@@ -36,6 +85,12 @@ echo "*"
 echo "*"
 
 
+<<<<<<< HEAD
+=======
+echo "*      Starting step 3 (mvn clean test on module 'inttest'): perform integration tests"
+echo "*      Please wait until step 3 is finished successfully!"
+echo "*"
+>>>>>>> development
 sh step3ExecIntegrationTests.sh
 
 
@@ -44,7 +99,13 @@ echo "*"
 echo "*"
 echo "*"
 
+<<<<<<< HEAD
 
+=======
+echo "*      Starting step 4 (mvn clean install test -Dtest=BuildReleaseAndTestSystem): building and system testing the release candidate (the MOGLiCC product)"
+echo "*      Please wait until step 4 is finished successfully!"
+echo "*"
+>>>>>>> development
 sh step4BuildReleaseAndExecSystemTests.sh
 
 
